--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,8 +7,8 @@ website:
     right:
       - href: index.qmd
         text: Home
-      - href: about.qmd
-        text: About
+      - href: projects.qmd
+        text: Projects
 
 format:
   html:
